[tool.poetry]
name = "generator"
version = "0.2.0"
description = "Generator for Leonidas and Cloud Detection Docs"
authors = [
    "Nick Jones",
    "Leo Tsaousis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.3"
mkdocs = "^1.1.2"
mkdocs-material = "^9.5.29"
pyyaml = "^6.0.1"
black = "^19.10b0"
pylint = "^2.5.2"
typer = "^0.2.1"
docker = "^6.0.1"
jinja2-ansible-filters = "^1.3.2"
pysigma = "^0.11.9"
pysigma-backend-elasticsearch = "^1.1.2"
requests = "< 2.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
