[tool.poetry]
name = "leonidas"
version = "0.1.0"
description = "Leonidas Attacker Action Executor"
authors = ["Nick Jones <nick@nojones.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"
flask_restx = "^1.0.5"
boto3 = "^1.26.60"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
